# mycmakefiles

CGAL_Qt5/: CMakeLists.txt
