cmake_minimum_required(VERSION 3.1.0)
set(CMAKE_BUILD_TYPE Release)
project(mytest)
add_compile_options(-std=c++14 -fPIC)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Xml CONFIG REQUIRED)
find_package(Qt5OpenGL CONFIG REQUIRED)
include_directories(${Qt5Widgets_INCLUDE_DIRS})
include_directories(${Qt5Xml_INCLUDE_DIRS})
include_directories(${Qt5OpenGL_INCLUDE_DIRS})
find_package(CGAL REQUIRED)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} Qt5::Widgets Qt5::Xml Qt5::OpenGL)
target_link_libraries(${PROJECT_NAME} -lCGAL -lCGAL_Qt5 -lCGAL_Core -lgmp)

